test/convertVectors.slq
n:=3;
k:=2;

def main(){
	x:=(1,2,3,4):!uint[n]^(2^k);
	z:=(1,2,3,4,5) coerce !uint[n]^(2^k);
	w:=(1,2,3,4);
	t:=w as !uint[n]^(2^k);
	y:=(1,2,3,4,5) as !uint[n]^(2^k); // error
}
